test/libyul/yulSyntaxTests/instructions_too_many_args.yul
{
	pop(mul(1, 2, 3))
}
// ----
// TypeError 7000: (7-10='mul'): Function "mul" expects 2 arguments but got 3.
